--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="row p-5">
+        <div class="row mt-5">
                <div class="col-md-6 col-sm-6 col-12">
                    <img src="./assets/fotos/menu.png" alt="">&nbsp;&nbsp;
                    <span class="" style="font-style: normal;font-family:'Poppins';font-size: 27.451px;font-weight: 900;">Crowdfund.</span>
@@ -45,7 +45,7 @@
 
     <div class="container-fluid mt-5">
         <div class="row row-cols justify-content-between">
-                <div class="col-md-4 col-sm-8 col-12">
+                <div class="col-md-4 col-sm-8 col-12 align-self-center">
                 <div class="main" style="display: flex;">
                       <div class="main1">
                         <img src="./assets/fotos/Icon.png" alt="" width="48px">
@@ -66,12 +66,12 @@
 
                 
               
-                <div class="col-md-7 col-sm-12 col-12 d-none d-md-block">
+                <div class="col-md-7 col-sm-12 col-12 p-0 d-none d-md-block">
                    <div class="col col-12 ">
                         <img src="./assets/fotos/Image.png" alt="" width="100%">
                     </div>
                     <div class="col col-12">
-                      <div class="box-pattern"  style="z-index: 1; position:absolute;top:440px;left:590px;">
+                      <div class="box-pattern"  style="z-index: 1; position:absolute;top:440px;left:695px;">
                         <img src="./assets/fotos/pattern.png" alt="">
                       </div>
                     </div>
@@ -80,7 +80,7 @@
                   </div>
         <div class="container">
         <div class="row align-items-end">
-          <div class="footer" style="display: flex; z-index: 2; position: absolute;bottom:-299px;left:0px;">
+          <div class="col-12" style="display: flex; z-index: 2; position: absolute;bottom:-268px;left:0px;">
             <div class="col-md-4 col-12">
                 <span class="" style="font-family: 'Roboto';font-weight: 400;font-size: 14px;color:#000000;">© 2019 crowdfund. All Rights Reserved</span>
             </div>
