--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                    </div>
                   </div>
                   </div>
-        <div class="container">
+        <div class="container-fluid">
         <div class="row align-items-end">
-          <div class="col-12" style="display: flex; z-index: 2; position: absolute;bottom:-268px;left:0px;">
+          <div class=""  style="display: flex; z-index: 2; position: absolute;bottom:0px;left:0px;">
             <div class="col-md-4 col-12">
                 <span class="" style="font-family: 'Roboto';font-weight: 400;font-size: 14px;color:#000000;">© 2019 crowdfund. All Rights Reserved</span>
             </div>
