--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
 <body>
     <div class="container">
-        <div class="row mt-5">
+        <div class="row d-flex align-items-center mt-5">
                <div class="col-md-6 col-sm-6 col-12">
-                   <img src="./assets/fotos/menu.png" alt="">&nbsp;&nbsp;
+                   <img src="./assets/fotos/menu.png" alt="" width="23px" height="23px">&nbsp;&nbsp;
                    <span class="" style="font-style: normal;font-family:'Poppins';font-size: 27.451px;font-weight: 900;">Crowdfund.</span>
                 </div>
                <div class="col-md-6 col-sm-6 col-12 text-end">
-                   <img src="./assets/fotos/User.png" alt="">&nbsp;&nbsp;
+                   <img src="./assets/fotos/User.png" alt="" width="23px" height="23px">&nbsp;&nbsp;
                    <span style="font-style: normal;font-family: 'Roboto';font-size: 18px;font-weight: 400;">Kate B.</span>&nbsp;&nbsp;&#9662;
                </div>
         </div>
@@ -44,7 +44,7 @@
     </div>
 
     <div class="container-fluid mt-5">
-        <div class="row row-cols justify-content-between">
+        <div class="row justify-content-between">
                 <div class="col-md-4 col-sm-8 col-12 align-self-center">
                 <div class="main" style="display: flex;">
                       <div class="main1">
@@ -80,7 +80,7 @@
                   </div>
         <div class="container-fluid">
         <div class="row align-items-end">
-          <div class=""  style="display: flex; z-index: 2; position: absolute;bottom:0px;left:0px;">
+          <div class=""  style="display: flex;align-items: center; z-index: 2; position: absolute;bottom:0px;left:0px;">
             <div class="col-md-4 col-12">
                 <span class="" style="font-family: 'Roboto';font-weight: 400;font-size: 14px;color:#000000;">© 2019 crowdfund. All Rights Reserved</span>
             </div>
